Closed
Bug 1271477
Opened 9 years ago
Closed 9 years ago
widget/gtk/WidgetStyleCache.cpp:191:29: error: 'PodArrayZero' was not declared in this scope (--disable-dbus)
Categories
(Core :: Widget: Gtk, defect)
Tracking
()
RESOLVED
FIXED
mozilla49
People
(Reporter: jbeich, Unassigned)
References
Details
(Keywords: regression)
Attachments
(2 files)
1.16 KB,
patch
|
karlt
:
review+
Sylvestre
:
approval-mozilla-aurora+
|
Details | Diff | Splinter Review |
1.32 KB,
patch
|
karlt
:
review+
|
Details | Diff | Splinter Review |
In file included from widget/gtk/Unified_cpp_widget_gtk0.cpp:29:
widget/gtk/WidgetStyleCache.cpp:191:3: error: use of undeclared identifier
'PodArrayZero'; did you mean 'mozilla::PodArrayZero'?
PodArrayZero(sStyleStorage);
^~~~~~~~~~~~
mozilla::PodArrayZero
dist/include/mozilla/PodOperations.h:65:1: note: 'mozilla::PodArrayZero'
declared here
PodArrayZero(T (&aT)[N])
^
In file included from widget/gtk/Unified_cpp_widget_gtk0.cpp:29:
widget/gtk/WidgetStyleCache.cpp:198:3: error: use of undeclared identifier
'PodArrayZero'; did you mean 'mozilla::PodArrayZero'?
PodArrayZero(sWidgetStorage);
^~~~~~~~~~~~
mozilla::PodArrayZero
dist/include/mozilla/PodOperations.h:65:1: note: 'mozilla::PodArrayZero'
declared here
PodArrayZero(T (&aT)[N])
^
2 errors generated.
Comment hidden (obsolete) |
In file included from widget/gtk/Unified_cpp_widget_gtk1.cpp:128:
In file included from widget/gtk/nsWidgetFactory.cpp:34:
widget/gtk/WakeLockListener.h:17:10: fatal error: 'mozilla/ipc/DBusConnectionRefPtr.h'
file not found
#include "mozilla/ipc/DBusConnectionRefPtr.h"
^
1 error
--disable-dbus (currently):
https://treeherder.mozilla.org/#/jobs?repo=try&revision=c47c0b407535
--disable-dbus + comment 0 fix:
https://treeherder.mozilla.org/#/jobs?repo=try&revision=e5172c647e27
--disable-dbus + comment 0 + comment 2 fix:
https://treeherder.mozilla.org/#/jobs?repo=try&revision=dbb412d955ab
--enable-dbus (default) comment 0 + comment 2 fix:
https://treeherder.mozilla.org/#/jobs?repo=try&revision=2873ac3b4224
Apologies for mixing two separate issues but they're a bit hard to untangle due to namespace pollution caused by unified build.
Attachment #8750562 -
Flags: review?(karlt)
Attachment #8750563 -
Flags: review?(karlt)
Comment 6•9 years ago
|
||
Attachment #8750562 -
Flags: review?(karlt) → review+
Updated•9 years ago
|
Attachment #8750563 -
Flags: review?(karlt) → review+
Comment 7•9 years ago
|
||
(In reply to Jan Beich from comment #5)
> Created attachment 8750563 [details] [diff] [review]
> comment 2 fix
Thanks for fixing this issue.
Keywords: checkin-needed
https://hg.mozilla.org/integration/mozilla-inbound/rev/639d6b288e9b
https://hg.mozilla.org/integration/mozilla-inbound/rev/ac974fdf2755
Keywords: checkin-needed
Comment 9•9 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/639d6b288e9b
https://hg.mozilla.org/mozilla-central/rev/ac974fdf2755
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla49
Keywords: regression
Reporter | ||
Comment 10•9 years ago
|
||
Comment on attachment 8750562 [details] [diff] [review]
comment 0 fix
Chasing https://hg.mozilla.org/releases/mozilla-aurora/pushloghtml?changeset=cb42beedc07e
Approval Request Comment
[Feature/regressing bug #]: bug 1234158 regression
[User impact if declined]: --disable-dbus build broken
[Describe test coverage new/current, TreeHerder]: m-c
[Risks and why]: Low, can only break build on Linux
[String/UUID change made/needed]: None
Attachment #8750562 -
Flags: approval-mozilla-aurora?
Updated•9 years ago
|
status-firefox48:
--- → affected
Comment 11•9 years ago
|
||
Comment on attachment 8750562 [details] [diff] [review]
comment 0 fix
Fix the build with some options, tiny risk, taking it.
Attachment #8750562 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Reporter | ||
Comment 12•9 years ago
|
||
Only comment 0 fix (the approved patch), comment 2 fix dependency (bug 1266054) wasn't backported/nominated for Aurora48 yet.
Flags: needinfo?(jbeich)
https://hg.mozilla.org/releases/mozilla-aurora/rev/94c2c4e54006
I'm setting status48 to 'fixed', but this will make it difficult for us to see if/when the comment2fix patch is ready to be uplifted. If/when you request uplift for it, please try to remember to set status48 back to 'affected' to make it easier to see this in our uplift queries. :)
Flags: needinfo?(jbeich)
![]() |
||
Comment 14•9 years ago
|
||
Flags: needinfo?(jbeich)
Reporter | ||
Comment 15•8 years ago
|
||
Bug 1266054 wasn't backported to FF48, so there was no need to backport comment 2 fix as well.
Flags: needinfo?(jbeich)
You need to log in
before you can comment on or make changes to this bug.
Description
•