Bug 1271477 - Unbreak --disable-dbus build after bug 1234158. r=karlt a=sylvestre